Register controller and Shared code have coverage

--- a/force-app/test/default/classes/SummitEventsRegisterAppointment_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsRegisterAppointment_TEST.cls
@@ -10,14 +10,6 @@ private class SummitEventsRegisterAppointment_TEST {
         List<Summit_Events_Instance__c> seaTestInstances = SummitEventsTestSharedDataFactory.createTestEvent();
         Summit_Events_Registration__c seaTestRegistration = SummitEventsTestSharedDataFactory.createEventRegistration(seaTestInstances[1], 'TestFirst', 'TestLast', 'test@valleyhill.net', '55418', '1971-03-22', '2012', null);
         List<Summit_Events_Appointment_Type__c> testAppointmentTypes = SummitEventsTestSharedDataFactory.createAppointmentTypes(seaTestInstances[1].Event__c);
-//        List<Summit_Events_Appointments__c> testAppointments = new List<Summit_Events_Appointments__c>();
-//        for (Summit_Events_Appointment_Type__c appointmentType : testAppointmentTypes) {
-//            Summit_Events_Appointments__c appointment = new Summit_Events_Appointments__c();
-//            appointment.Event_Registration__c = seaTestRegistration.Id;
-//            testAppointments.add(appointment);
-//        }
-//        insert testAppointments;
-
         Test.startTest();
         SummitEventsRegisterAppointmentCtlr optionsCtrl = new SummitEventsRegisterAppointmentCtlr();
 
@@ -34,10 +26,17 @@ private class SummitEventsRegisterAppointment_TEST {
 
         String jsonAppointments = '[';
         for (Summit_Events_Appointment_Type__c at : testAppointmentTypes) {
-            jsonAppointments += '{"apptId":"' + at.Id + '","apptCategory":"","apptType":"","apptText":"","apptTitle":"' + at.Title__c + '"},';
+            jsonAppointments += '{';
+            jsonAppointments += '"apptId":"' + at.Id + '",';
+            jsonAppointments += '"apptCategory":"' + at.Appointment_Category__c + '",';
+            jsonAppointments += '"apptType":"' + at.Appointment_Type__c + '",';
+            jsonAppointments += '"apptText":"",';
+            jsonAppointments += '"apptTitle":"' + at.Title__c + '"';
+            jsonAppointments += '},';
         }
         jsonAppointments = jsonAppointments.removeEnd(',');
         jsonAppointments += ']';
+        System.debug('JSON HERE: ' + jsonAppointments);
         optionsCtrl.incomingAppointmentJSON = jsonAppointments;
         optionsCtrl.saveOptions();
 
