More coverage for email trigger

--- a/force-app/main/default/classes/SummitEventsRegisterController.cls
+++ b/force-app/main/default/classes/SummitEventsRegisterController.cls
@@ -416,7 +416,6 @@ public with sharing class SummitEventsRegisterController {
     }
 
     public PageReference saveContactRegistration() {
-        Boolean newContactCreated = false;
         PageReference optionPage;
 
         if (String.isNotBlank(phoneType) && eventPage.Ask_Phone__c.containsIgnoreCase('with type')) {
@@ -444,7 +443,7 @@ public with sharing class SummitEventsRegisterController {
             eventRegistration.Registrant_Date_of_Birth__c = Date.parse(birthDateString);
         }
 
-        if (!String.isBlank(applicantType)) {
+        if (String.isNotBlank(applicantType)) {
             eventRegistration.Registrant_Applicant_Type__c = applicantType;
         } else if (eventPage.Ask_Applicant_Type__c == 'Do not ask but assign First-Year') {
             eventRegistration.Registrant_Applicant_Type__c = 'First-Year';
@@ -493,10 +492,6 @@ public with sharing class SummitEventsRegisterController {
         eventRegistration.Event__c = eventInformation.eventId;
         eventRegistration.Event_Instance__c = eventInformation.instanceId;
         eventRegistration.Contact__c = contactId;
-        if (newContactCreated) {
-            eventRegistration.New_Contact_Created__c = true;
-        }
-
         eventRegistration = rCRUD.updateRegistration(eventRegistration, incomingEventRegistrationId, registrantAudience, eventFeeList);
         eventInformation.registrationId = eventRegistration.Id;
 
@@ -557,8 +552,7 @@ public with sharing class SummitEventsRegisterController {
             try {
                 delete deletableFees;
             } catch (Exception ex) {
-                ApexPages.Message myMsg = new ApexPages.Message(ApexPages.Severity.WARNING, ex.getMessage());
-                ApexPages.addMessage(myMsg);
+                System.debug(ex.getMessage());
             }
         }
 
