--- a/force-app/test/default/classes/SummitEventsRegistration_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsRegistration_TEST.cls
@@ -7,42 +7,46 @@
 public class SummitEventsRegistration_TEST {
     @IsTest
     public static void TestSummitEventsRegistration() {
-        Summit_Events__c event = new Summit_Events__c();
-        event.Name = 'Test event';
-        insert event;
 
-        Summit_Events_Instance__c instance = new Summit_Events_Instance__c();
-        instance.Event__c = event.Id;
-        instance.Instance_Start_Date__c = System.today();
-        instance.Instance_Start_Time__c = Time.newInstance(0, 0, 0, 0);
-        instance.Instance_End_Date__c = System.today();
-        instance.Instance_End_Time__c = Time.newInstance(23, 59, 59, 0);
-        instance.Active_Status__c = 'Active';
-        insert instance;
+        List<Summit_Events_Instance__c> seaTestInstances = SummitEventsTestSharedDataFactory.createTestEvent();
+        Summit_Events_Registration__c seaTestRegistration = SummitEventsTestSharedDataFactory.createEventRegistration(seaTestInstances[1], 'Test', 'Tester', 'test@test.net', '55555', '1971-03-22', '2012', null);
+        Summit_Events__c seaTestEvent = SummitEventsTestSharedDataFactory.getEventRecord(seaTestInstances[1].Event__c);
+
         Summit_Events_Email__c email1 = new Summit_Events_Email__c();
-        email1.Event__c = event.Id;
+        email1.Event__c = seaTestInstances[1].Event__c;
         email1.Action_Status__c = 'Registered';
         email1.Email_Content__c = 'Sample text here';
         email1.Letterhead_HTML__c = 'Letterhead goes here<br/>[[DONT_DELETE_CONTENT_HERE]]';
         email1.BCC_Email__c = 'bcc@example.com';
+
         insert email1;
         Summit_Events_Email__c email2 = new Summit_Events_Email__c();
-        email2.Event__c = event.Id;
+        email2.Event__c = seaTestInstances[1].Event__c;
         email2.Action_Status__c = 'Registered';
         email2.Action_Sub_status__c = 'In Progress';
-        email2.Email_Content__c = 'Sample text here';
+        email2.Email_Content__c = 'Sample text here {!Registrant_Last_Name__c} {!Add_To_Calendar_Link__c}';
         email2.Letterhead_HTML__c = 'Letterhead goes here<br/>[[DONT_DELETE_CONTENT_HERE]]';
         email2.BCC_Email__c = 'bcc@example.com';
         insert email2;
-        Summit_Events_Registration__c registration = new Summit_Events_Registration__c();
-        registration.Event__c = event.Id;
-        registration.Event_Instance__c = instance.Id;
-        registration.Status__c = 'Registered';
-        registration.Registrant_First_Name__c = 'Test';
-        registration.Registrant_Last_Name__c = 'Record';
-        registration.Registrant_Email__c = 'test@example.com';
-        insert registration;
-        registration.Substatus__c = 'In Progress';
-        update registration;
+
+        seaTestRegistration.Status__c = 'Registered';
+        update seaTestRegistration;
+
+        seaTestRegistration.Substatus__c = 'In Progress';
+        update seaTestRegistration;
+
+        List<Task> emailTasks = [
+                SELECT Id, Subject
+                FROM Task
+                WHERE WhatId = :seaTestRegistration.Id
+                AND Type = 'Email'
+                AND Status = 'Completed'
+                AND Priority = 'Low'
+                AND WhoId = :seaTestRegistration.Contact__c
+        ];
+
+        //Two tasks should have been created when both status emails were sent
+        System.assertEquals(emailTasks.size(), 2);
+
     }
 }
